--- a/src/assets/componat/Card2.css
+++ b/src/assets/componat/Card2.css
@@ -1,9 +1,3 @@
-.cardContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    row-gap: 50px;
-}
 .card {
     width: 400px;
     flex-shrink: 0;
@@ -34,6 +28,7 @@
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
+    
 }
 
 .makeName {
@@ -53,4 +48,9 @@
     width: 100%;
     background-color: rgb(177, 177, 177);
     color: rgb(13, 52, 102);
+}
+
+.box {
+    inline-size: 100%;
+    overflow: hidden;
 }
