--- a/src/assets/componat/Card.css
+++ b/src/assets/componat/Card.css
@@ -4,17 +4,18 @@
     height: 450px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: rgb(138, 138, 138);
+    background-color: rgb(255, 255, 255);
 
 }
 
 .imageContainer {
     display: flex;
     align-items: center;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     width: 100%;
     height: 75%;
-    background-color: rgb(138, 138, 138);
+    background-color: rgba(0, 0, 0, 0.039);
 }
 
 .imageContainer .image {
@@ -46,6 +47,6 @@
 
 .info {
     width: 100%;
-    background-color: rgb(177, 177, 177);
+    /* background-color: rgba(0, 0, 0, 0.055); */
     color: rgb(13, 52, 102);
 }
