--- a/src/assets/page/Home.css
+++ b/src/assets/page/Home.css
@@ -3,54 +3,5 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     row-gap: 50px;
-}
-.card {
-    width: 400px;
-    flex-shrink: 0;
-    height: 450px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: rgb(138, 138, 138);
-
-}
-
-.imageContainer {
-    display: flex;
-    align-items: center;
-    border-radius: 10px;
-    width: 100%;
-    height: 75%;
-    background-color: rgb(138, 138, 138);
-}
-
-.imageContainer .image {
-    width: 100%;
-    max-height: 100%;
-    border-radius: 10px;
-}
-
-.modelName {
-    font-size: x-large;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-}
-
-.makeName {
-    font-size: large;
-    font-weight: bold;
-    padding-bottom: 5px;
-    padding-left: 10px;
-}
-
-.value {
-    font-size: x-large;
-    padding-bottom: 5px;
-    padding-left: 10px;
-}
-
-.info {
-    width: 100%;
-    background-color: rgb(177, 177, 177);
-    color: rgb(13, 52, 102);
+    padding: 20px;
 }
