--- a/src/assets/componat/Card.css
+++ b/src/assets/componat/Card.css
@@ -3,9 +3,17 @@
     flex-shrink: 0;
     height: 450px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: rgb(255, 255, 255);
+    box-shadow: 0 4px 8px 0 rgba(255, 204, 0, 0.479);
+    background-color: rgba(255, 255, 255, 0.384);
+    border-style: solid;
+    border-color: #ffce083f;
+    border-width: 3px;
+    transition: 0.5s;
+}
 
+.card:hover {
+    box-shadow: 0 6px 10px 0 rgb(255, 204, 0);
+    border-color: #ffce08;
 }
 
 .imageContainer {
@@ -15,13 +23,12 @@
     border-top-right-radius: 10px;
     width: 100%;
     height: 75%;
-    background-color: rgba(0, 0, 0, 0.039);
+    /* background-color: rgba(0, 0, 0, 0.304); */
 }
 
 .imageContainer .image {
     width: 100%;
     max-height: 100%;
-    border-radius: 10px;
 }
 
 .modelName {
@@ -29,7 +36,7 @@
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
-    
+    color: #ffce08;
 }
 
 .makeName {
@@ -48,5 +55,5 @@
 .info {
     width: 100%;
     /* background-color: rgba(0, 0, 0, 0.055); */
-    color: rgb(13, 52, 102);
+    color: rgb(25, 39, 57);
 }
