--- a/src/assets/componat/DropdownMenu.css
+++ b/src/assets/componat/DropdownMenu.css
@@ -1,10 +1,12 @@
 .dropbtn {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(255, 255, 255, 0);
     color: white;
-    padding: 16px;
+    /* padding: 16px; */
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 100%;
+    height: 100%;
   }
   
   .dropdown {
@@ -15,8 +17,9 @@
   .dropdown-content {
     display: none;
     position: absolute;
+    /* justify-items: center; */
+    right: 0;
     background-color: #f9f9f9;
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
